--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -3,6 +3,20 @@ body {
     "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Open Sans", "Helvetica Neue", "sans-serif" !important;
 }
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 .header {
   position: absolute;
   width: 100%;
@@ -12,6 +26,68 @@ body {
   background: #fff;
   color: rgba(0, 0, 0, 0.54);
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
+}
+#publicContainer {
+  width: 100%;
+  height: 560px;
+  position: relative;
+  display: block;
+  background: #99ddcc;
+}
+#public-header {
+  padding-left: 8%;
+  padding-top: 10px;
+  height: 5em;
+  font-size: 1.8em;
+  background: #fff;
+  font-weight: 800;
+}
+#public-title {
+  margin: auto 0;
+  text-align: center;
+  padding: 20px 20px;
+  font-size: 3em;
+  display: block;
+  color: #f4f9f4;
+}
+#puibic-toLoginBtn {
+  padding: 0.667em 2em;
+  border-radius: 0.333em;
+  font-size: 1em;
+  position: relative;
+  top: 70px;
+  left: 45%;
+  text-decoration: "none";
+  font-weight: 300;
+  background: #309286;
+  color: #f4f9f4;
+  margin: auto 0;
+}
+#public-description {
+  margin: 0 auto 80px;
+  position: relative;
+  top: 70px;
+  left: 33%;
+  width: 100%;
+}
+.Public-coverImg {
+  width: 250px;
+  height: 250px;
+  margin-right: 40px;
+  border-radius: 50%;
+  display: inline-block;
+  border: 1px solid #e0e0e0;
+}
+.ImgContainer {
+  display: inline-block;
+}
+.public-text {
+  display: block;
+  position: relative;
+  left: -18px;
+  font-size: 20px;
+  top: 40px;
+  text-align: center;
 }
 .logoWapper {
   padding-left: 20px !important;
@@ -217,14 +293,12 @@ body {
   padding: 50px;
   padding-left: 200px;
   border-top: 1px solid rgba(0, 0, 0, 0.05) !important;
-
   margin: 0 auto;
 }
 #clapNum {
   height: 35px;
   width: 35px;
-
-  margin-left: 10px;
+  margin-left: 18px;
   color: rgba(0, 0, 0, 0.54);
 }
 #clap,
@@ -406,6 +480,8 @@ button[type="submit"]:hover {
 }
 .ListItem {
   margin: auto;
+  text-decoration: "none";
+  color: rgba(0, 0, 0, 0.84);
   width: 680px;
   height: 260px;
   padding: 23px 0;
