--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -61,13 +61,12 @@ ul {
   font-weight: 300;
   background: #309286;
   color: #f4f9f4;
-  margin: auto 0;
 }
 #public-description {
-  margin: 0 auto 80px;
+  margin: 0 auto;
   position: relative;
   top: 70px;
-  left: 33%;
+  left: 20%;
   width: 100%;
 }
 .Public-coverImg {
