--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -28,6 +28,10 @@ ul {
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
 }
 #publicContainer {
+  display: flex;
+  flex-direction: column;
+}
+#public-header-container {
   width: 100%;
   height: 560px;
   position: relative;
@@ -49,6 +53,7 @@ ul {
   font-size: 3em;
   display: block;
   color: #f4f9f4;
+  letter-spacing: 2px;
 }
 #puibic-toLoginBtn {
   padding: 0.667em 2em;
@@ -62,11 +67,14 @@ ul {
   background: #309286;
   color: #f4f9f4;
 }
+#puibic-toLoginBtn:hover {
+  background: #007880;
+}
 #public-description {
   margin: 0 auto;
-  position: relative;
-  top: 70px;
-  left: 20%;
+  display: flex;
+  justify-content: center;
+  margin-top: 70px;
   width: 100%;
 }
 .Public-coverImg {
@@ -256,8 +264,7 @@ ul {
   position: relative;
   top: 100px;
   margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 20px 40px;
 }
 .ArticleTitle,
 .ArticleSubTitle {
@@ -276,8 +283,8 @@ ul {
   letter-spacing: -0.003em;
 }
 .sideBar {
-  margin-left: 30px;
-  margin-top: 100px;
+  margin: 100px 30px;
+
   position: fixed;
 }
 .TextDiv {
